[package]
name = "fig_util"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
camino.workspace = true
cfg-if.workspace = true
clap.workspace = true
dirs.workspace = true
fig_os_shim.workspace = true
hex.workspace = true
indoc.workspace = true
libc.workspace = true
paste = "1.0.11"
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.6"
strum = { version = "0.27.1", features = ["derive"] }
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
whoami.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
appkit-nsworkspace-bindings.workspace = true
core-foundation = "0.10.0"
macos-utils = { path = "../macos-utils" }
objc2.workspace = true
objc2-app-kit = { workspace = true, features = ["NSWorkspace"] }
objc2-foundation = { workspace = true, features = ["NSURL"] }

[target.'cfg(target_os = "linux")'.dependencies]
bstr.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Kernel",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
winreg = "0.55.0"

[target.'cfg(unix)'.dependencies]
sysinfo.workspace = true
nix.workspace = true

[dev-dependencies]
fig_test = { path = "../fig_test" }
insta.workspace = true
uuid.workspace = true
