[package]
name = "macos-utils"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1.6"
core-graphics = "0.23.0"
core-foundation = "0.9"
cocoa = "0.25.0"
objc.workspace = true
dashmap.workspace = true
flume = "0.11.0"
fnv = "1.0.7"
accessibility-sys = { path = "./accessibility-master/accessibility-sys" }
once_cell.workspace = true
accessibility = { path = "./accessibility-master/accessibility" }
appkit-nsworkspace-bindings.workspace = true
tracing.workspace = true
tokio.workspace = true
nix.workspace = true
