[package]
name = "mcp_client"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []

[[bin]]
name = "test_mcp_server"
path = "test_mcp_server/test_server.rs"
test = true
doc = false

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
nix.workspace = true
