[package]
name = "q_cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
gamma = ["fig_install/gamma"]

[dependencies]
amzn-codewhisperer-client.workspace = true
amzn-codewhisperer-streaming-client.workspace = true
anstream.workspace = true
appkit-nsworkspace-bindings.workspace = true
arboard = { version = "3.1.1", default-features = false, features = [
    "wayland-data-control",
] }
async-trait.workspace = true
aws-smithy-types = "1.1.7"
aws-types.workspace = true
bitflags.workspace = true
bstr.workspace = true
bytes.workspace = true
camino.workspace = true
cfg-if.workspace = true
clap.workspace = true
clap_complete = "4.4.0"
clap_complete_fig = "4.4.0"
color-eyre = "0.6.2"
color-print = "0.3.5"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ctrlc = "3.2.5"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
eyre = "0.6.8"
fig_api_client.workspace = true
fig_auth.workspace = true
fig_diagnostic.workspace = true
fig_install.workspace = true
fig_integrations.workspace = true
fig_ipc.workspace = true
fig_log.workspace = true
fig_os_shim.workspace = true
fig_proto.workspace = true
fig_remote_ipc.workspace = true
fig_request.workspace = true
fig_settings.workspace = true
fig_telemetry.workspace = true
fig_util.workspace = true
flume = "0.11.0"
futures = "0.3.26"
globset = "0.4.10"
indicatif = "0.17.3"
indoc.workspace = true
mimalloc.workspace = true
objc.workspace = true
once_cell.workspace = true
owo-colors = "4.0.0"
parking_lot = "0.12.1"
rand.workspace = true
regex.workspace = true
rustyline = { version = "14.0.0", features = ["derive"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
spinners = "4.1.0"
sysinfo.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-width = "0.1.11"
url = "2.5.4"
uuid.workspace = true
walkdir = "2.5.0"
which.workspace = true
whoami.workspace = true
winnow = "0.6.2"

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
macos-utils = { path = "../macos-utils" }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { path = "../dbus" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.57.0", features = ["Win32_System_Threading"] }
winapi = { version = "0.3", features = ["consoleapi"] }

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5.1"
insta.workspace = true
paste = "1.0.11"
predicates = "3.0"
